--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,1 @@
-<link rel="icon" href="https://www.leedsraspjam.co.uk/images/mic/favicon.ico">
+<link rel="icon" href="https://www.leedsraspjam.co.uk/images/misc/favicon.ico">
