--- a/_sass/_bootstrap-readable.scss
+++ b/_sass/_bootstrap-readable.scss
@@ -1101,7 +1101,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #383838;
+  color: #4582ec;
   text-decoration: none;
 }
 a:hover,
@@ -1378,7 +1378,7 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #383838;
+  background-color: #4582ec;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
@@ -4011,7 +4011,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #383838;
+  border-color: #4582ec;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4104,7 +4104,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #383838;
+  background-color: #4582ec;
 }
 .nav-stacked > li {
   float: none;
@@ -4515,13 +4515,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #383838;
+  color: #4582ec;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #383838;
+  color: #4582ec;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .disabled > a,
@@ -4548,7 +4548,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   background-color: transparent;
-  color: #383838;
+  color: #4582ec;
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
@@ -4827,7 +4827,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: #383838;
+  background-color: #4582ec;
 }
 .pager .next > a,
 .pager .next > span {
@@ -4946,7 +4946,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #383838;
+  color: #4582ec;
   background-color: #ffffff;
 }
 .list-group-item > .badge {
@@ -5021,7 +5021,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #383838;
+  border-color: #4582ec;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -5143,7 +5143,7 @@ a.thumbnail.active {
   line-height: 22px;
   color: #ffffff;
   text-align: center;
-  background-color: #383838;
+  background-color: #4582ec;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5307,8 +5307,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #383838;
-  border-color: #383838;
+  background-color: #4582ec;
+  border-color: #4582ec;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5703,22 +5703,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #383838;
+  border-color: #4582ec;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #383838;
-  border-color: #383838;
+  background-color: #4582ec;
+  border-color: #4582ec;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #383838;
+  border-top-color: #4582ec;
 }
 .panel-primary > .panel-heading .badge {
-  color: #383838;
+  color: #4582ec;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #383838;
+  border-bottom-color: #4582ec;
 }
 .panel-success {
   border-color: #3fad46;
@@ -6775,7 +6775,7 @@ button.close {
   border: 1px solid #ddd;
 }
 .navbar-default .navbar-nav > .active > a:hover {
-  color: #383838;
+  color: #4582ec;
 }
 .navbar-inverse .navbar-nav > .active > a:hover {
   color: #333333;
@@ -6867,8 +6867,4 @@ legend {
 }
 .modal .close {
   color: #333333;
-}
-.card {
-     display: -webkit-inline-box;
-    height: 500px;
 }
