--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row p20">
             <div class="col-md-4 text-center mt25">Site licenced under CC-BY-SA 4.0. Find the code at <a href="https://github.com/lrj-web/">https://github.com/lrj-web.</a></div>
-            <div class="col-md-4 text-center mt25">
+            <div class="col-md-4 text-center mt25" id="social_links">
                {% if site.twitter %}
                <a target="_blank" href="{{site.twitter}}"><li class="social twitter"><i class="fa fa-twitter-square"></i></li></a>
                {% endif %}
