--- a/_sass/_bootstrap-readable.scss
+++ b/_sass/_bootstrap-readable.scss
@@ -1100,6 +1100,10 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
+social_links {
+  color: #383838;
+  text-decoration: none;
+}
 a {
   color: #4582ec;
   text-decoration: none;
