--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
         <div class="row p20">
-            <div class="col-md-4 text-center mt25">Site licenced under CC-BY-SA 4.0. Find the code at <a href="https://github.com/leedsraspjam/">https://github.com/leedsraspjam.</a></div>
+            <div class="col-md-4 text-center mt25">Site licenced under CC-BY-SA 4.0. Find the code at <a href="https://github.com/leedsraspjam/www/">https://github.com/leedsraspjam/www.</a></div>
             <div class="col-md-4 text-center mt25">
                {% if site.twitter %}
                <a target="_blank" href="{{site.twitter}}"><li class="social twitter"><i class="fa fa-twitter-square"></i></li></a>
