--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
-<footer>
+<footer class=" mt-4 mt-md-5">
     <div class="container">
         <div class="row p20">
-            <div class="col-md-4 text-center mt25">Site licenced under CC-BY-SA 4.0. Find the code at <a href="https://github.com/leedsraspjam/www/">https://github.com/leedsraspjam/www.</a></div>
+            <div class="col-md-4 text-center mt25">Site licenced under CC-BY-SA 4.0.<br>Find the code at <a href="https://github.com/leedsraspjam/www/">https://github.com/leedsraspjam/www.</a></div>
             <div class="col-md-4 text-center mt25">
-               {% if site.twitter %}
-               <a target="_blank" href="{{site.twitter}}"><li class="social twitter"><i class="fa fa-twitter-square"></i></li></a>
-               {% endif %}
                {% if site.facebook %}
                 <a target="_blank" href="{{site.facebook}}"><li class="social facebook"><i class="fa fa-facebook-square"></i></li></a>
+                {% endif %}
+               {% if site.twitter %}
+                <a target="_blank" href="{{site.twitter}}"><li class="social twitter"><i class="fa fa-twitter-square"></i></li></a>
                 {% endif %}
                {% if site.github %}
                 <a target="_blank" href="{{site.github}}"><li class="social github"><i class="fa fa-github-square"></i></li></a>
