--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class=" mt-4 mt-md-5">
     <div class="container">
         <div class="row p20">
-            <div class="col-md-4 text-center mt25">Site licenced under CC-BY-SA 4.0.<br>Based on a theme by <a href="https://webjeda.com">webjeda.com</a><br>Find the code at <a href="https://github.com/leedsraspjam/www/">https://github.com/leedsraspjam/www.</a></div>
+            <div class="col-md-4 text-center mt25">Site licenced under CC-BY-SA 4.0.<br>Based on a theme by <a href="https://webjeda.com">webjeda.com.</a><br>Find the code at <a href="https://github.com/leedsraspjam/www/">https://github.com/leedsraspjam/www.</a></div>
             <div class="col-md-4 text-center mt25">
                {% if site.facebook %}
                 <a target="_blank" href="{{site.facebook}}"><li class="social facebook"><i class="fa fa-facebook-square"></i></li></a>
