--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
 <header class="site-header">
-<a class="navbar-brand" href="{{site.baseurl}}/">Leeds Raspberry Jam</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+  <a class="navbar-brand" href="{{site.baseurl}}/">Leeds Raspberry Jam</a>
+</nav>
 </header>
