--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <a class="navbar-brand" href="{{site.baseurl}}/">Leeds Raspberry Jam</a>
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="display:none;">
-    <span class="navbar-toggler-icon" style="display:none;"></span>
+    <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
 </header>
