--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
-<a class="navbar-brand" href="{{site.baseurl}}/">Leeds Raspberry Jam</a>
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="visibility:hidden;">
+  <a class="navbar-brand" href="{{site.baseurl}}/">Leeds Raspberry Jam</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="display:none;">
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
